# htree

./: README.md  TODO.md  pyproject.toml  read.py  setup.py
htree/: scores.npy  test_tree.py  tree_collections.py
htree.egg-info/: SOURCES.txt
htree/backup/: tree_collections2.py
htree/path/to/: output.tre  output_normalized.tre  output_unnormalized.tre  treefile1.tre  treefile3.tre
htree/tmp/Results/2025-03-06_18-17-48/: hyperbolic_embedding_2d.pkl
htree/tmp/Results/2025-03-06_18-18-15/: hyperbolic_embedding_2d.pkl
htree/tmp/Results/20250227_182111/: hyperbolic_space.pkl
htree/tmp/Results/20250227_182130/: hyperbolic_space.pkl
htree/tmp/Results/20250227_182200/: RE_1.npy  RE_11.npy  RE_13.npy  RE_2.npy  RE_20.npy  RE_21.npy  RE_22.npy  RE_23.npy  RE_24.npy  RE_25.npy  RE_26.npy  RE_27.npy  RE_28.npy  RE_31.npy  RE_33.npy  RE_34.npy  RE_36.npy  RE_39.npy  RE_40.npy  RE_42.npy  RE_45.npy  RE_46.npy  RE_47.npy  RE_48.npy  RE_50.npy  RE_53.npy  RE_55.npy  RE_58.npy  RE_6.npy  RE_60.npy  RE_61.npy  RE_62.npy  RE_63.npy  RE_64.npy  RE_66.npy  RE_67.npy  RE_68.npy  RE_70.npy  RE_71.npy  RE_73.npy  (+20 more)
htree/tmp/Results/20250227_182342/: RE_10.npy  RE_100.npy  RE_12.npy  RE_14.npy  RE_15.npy  RE_16.npy  RE_17.npy  RE_18.npy  RE_19.npy  RE_29.npy  RE_3.npy  RE_30.npy  RE_32.npy  RE_35.npy  RE_37.npy  RE_38.npy  RE_4.npy  RE_41.npy  RE_43.npy  RE_44.npy  RE_49.npy  RE_5.npy  RE_51.npy  RE_52.npy  RE_54.npy  RE_56.npy  RE_57.npy  RE_59.npy  RE_65.npy  RE_69.npy  RE_7.npy  RE_8.npy  (+13 more)
path/to/: output2.tre
source/: conf.py  index.rst
your_package/path/to/: treefile.tre
(+178 files in other folders)
