[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htree"
version = "2.3.3"  
description = "A library for tree reading, embedding, and analysis of phylogenetic trees"
authors = [
    { name = "Puoya Tabaghi", email = "ptabaghi@ucsd.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10.16"

dependencies = [
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "treeswift>=1.1.45",
    "tqdm>=4.67.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg >= 0.6.0" 
]

[project.urls]
Homepage = "https://puoya.github.io/codes/hypertree.html"
Repository = "https://github.com/puoya/HyperTree"

[tool.setuptools]
packages = ["htree"]
